Nancy-Playground/MppgParser/Grammar/MppgParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./Mppg.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Unipi.MppgParser.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MppgParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		NEW_LINE=60, WHITE_SPACE=61, NUMBER_ABS_LITERAL=62, INTEGER_LITERAL=63, 
		DECIMAL_NUMBER_ABS_LITERAL=64, INFINITE_NUMBER_ABS_LITERAL=65, ASSIGN=66, 
		PLUS=67, MINUS=68, WEDGE=69, VEE=70, PROD_SIGN=71, DIV_SIGN=72, DIV_OP=73, 
		STRING_LITERAL=74, INLINABLE_COMMENT=75, VARIABLE_NAME=76;
	public const int
		RULE_program = 0, RULE_statementLine = 1, RULE_statement = 2, RULE_assignment = 3, 
		RULE_expressionCommand = 4, RULE_expression = 5, RULE_comment = 6, RULE_inlineComment = 7, 
		RULE_empty = 8, RULE_functionExpression = 9, RULE_functionConstructor = 10, 
		RULE_rateLatency = 11, RULE_tokenBucket = 12, RULE_affineFunction = 13, 
		RULE_stepFunction = 14, RULE_stairFunction = 15, RULE_delayFunction = 16, 
		RULE_zeroFunction = 17, RULE_epsilonFunction = 18, RULE_ultimatelyAffineFunction = 19, 
		RULE_ultimatelyPseudoPeriodicFunction = 20, RULE_uppTransientPart = 21, 
		RULE_uppPeriodicPart = 22, RULE_increment = 23, RULE_periodLenght = 24, 
		RULE_sequence = 25, RULE_element = 26, RULE_point = 27, RULE_segment = 28, 
		RULE_endpoint = 29, RULE_segmentLeftOpenRightOpen = 30, RULE_segmentLeftOpenRightClosed = 31, 
		RULE_segmentLeftClosedRightOpen = 32, RULE_segmentLeftClosedRightClosed = 33, 
		RULE_numberExpression = 34, RULE_numberEnclosedExpression = 35, RULE_numberLiteral = 36, 
		RULE_numberReturningfunctionOperation = 37, RULE_functionValueAt = 38, 
		RULE_functionLeftLimitAt = 39, RULE_functionRightLimitAt = 40, RULE_functionHorizontalDeviation = 41, 
		RULE_functionVerticalDeviation = 42, RULE_plotCommand = 43, RULE_plotArg = 44, 
		RULE_functionName = 45, RULE_plotOption = 46, RULE_string = 47, RULE_stringLiteral = 48, 
		RULE_stringVariable = 49, RULE_interval = 50, RULE_assertion = 51, RULE_assertionOperator = 52, 
		RULE_printExpressionCommand = 53;
	public static readonly string[] ruleNames = {
		"program", "statementLine", "statement", "assignment", "expressionCommand", 
		"expression", "comment", "inlineComment", "empty", "functionExpression", 
		"functionConstructor", "rateLatency", "tokenBucket", "affineFunction", 
		"stepFunction", "stairFunction", "delayFunction", "zeroFunction", "epsilonFunction", 
		"ultimatelyAffineFunction", "ultimatelyPseudoPeriodicFunction", "uppTransientPart", 
		"uppPeriodicPart", "increment", "periodLenght", "sequence", "element", 
		"point", "segment", "endpoint", "segmentLeftOpenRightOpen", "segmentLeftOpenRightClosed", 
		"segmentLeftClosedRightOpen", "segmentLeftClosedRightClosed", "numberExpression", 
		"numberEnclosedExpression", "numberLiteral", "numberReturningfunctionOperation", 
		"functionValueAt", "functionLeftLimitAt", "functionRightLimitAt", "functionHorizontalDeviation", 
		"functionVerticalDeviation", "plotCommand", "plotArg", "functionName", 
		"plotOption", "string", "stringLiteral", "stringVariable", "interval", 
		"assertion", "assertionOperator", "printExpressionCommand"
	};

	private static readonly string[] _LiteralNames = {
		null, "'>'", "'('", "')'", "'*_'", "'*^'", "'/_'", "'/^'", "'comp'", "'star'", 
		"'hShift'", "'hshift'", "','", "'vShift'", "'vshift'", "'inv'", "'low_inv'", 
		"'up_inv'", "'upclosure'", "'nnupclosure'", "'left-ext'", "'right-ext'", 
		"'ratency'", "'bucket'", "'affine'", "'step'", "'stair'", "'delay'", "'zero'", 
		"'epsilon'", "'uaf'", "'upp'", "'period'", "'['", "']'", "'~'", "'hDev'", 
		"'hdev'", "'vDev'", "'vdev'", "'plot'", "'main'", "'='", "'title'", "'xlim'", 
		"'ylim'", "'xlab'", "'ylab'", "'out'", "'grid'", "'\"no\"'", "'\"yes\"'", 
		"'bg'", "'gui'", "'assert'", "'!='", "'<'", "'<='", "'>='", "'printExpression'", 
		null, null, null, null, null, null, "':='", "'+'", "'-'", "'/\\'", "'\\/'", 
		"'*'", "'/'", "'div'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NEW_LINE", "WHITE_SPACE", "NUMBER_ABS_LITERAL", "INTEGER_LITERAL", "DECIMAL_NUMBER_ABS_LITERAL", 
		"INFINITE_NUMBER_ABS_LITERAL", "ASSIGN", "PLUS", "MINUS", "WEDGE", "VEE", 
		"PROD_SIGN", "DIV_SIGN", "DIV_OP", "STRING_LITERAL", "INLINABLE_COMMENT", 
		"VARIABLE_NAME"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Mppg.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MppgParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MppgParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MppgParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementLineContext[] statementLine() {
			return GetRuleContexts<StatementLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementLineContext statementLine(int i) {
			return GetRuleContext<StatementLineContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MppgParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEW_LINE() { return GetTokens(MppgParser.NEW_LINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEW_LINE(int i) {
			return GetToken(MppgParser.NEW_LINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			statementLine();
			State = 113;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 109;
					Match(NEW_LINE);
					State = 110;
					statementLine();
					}
					} 
				}
				State = 115;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NEW_LINE) {
				{
				State = 116;
				Match(NEW_LINE);
				}
			}

			State = 119;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementLineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InlineCommentContext inlineComment() {
			return GetRuleContext<InlineCommentContext>(0);
		}
		public StatementLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementLine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementLineContext statementLine() {
		StatementLineContext _localctx = new StatementLineContext(Context, State);
		EnterRule(_localctx, 2, RULE_statementLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			statement();
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INLINABLE_COMMENT) {
				{
				State = 122;
				inlineComment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionCommandContext expressionCommand() {
			return GetRuleContext<ExpressionCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PlotCommandContext plotCommand() {
			return GetRuleContext<PlotCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssertionContext assertion() {
			return GetRuleContext<AssertionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintExpressionCommandContext printExpressionCommand() {
			return GetRuleContext<PrintExpressionCommandContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyContext empty() {
			return GetRuleContext<EmptyContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 132;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125;
				assignment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 126;
				expressionCommand();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127;
				plotCommand();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 128;
				assertion();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 129;
				printExpressionCommand();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 130;
				comment();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 131;
				empty();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE_NAME() { return GetToken(MppgParser.VARIABLE_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(MppgParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134;
			Match(VARIABLE_NAME);
			State = 135;
			Match(ASSIGN);
			State = 136;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionCommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ExpressionCommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionCommand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionCommandContext expressionCommand() {
		ExpressionCommandContext _localctx = new ExpressionCommandContext(Context, State);
		EnterRule(_localctx, 8, RULE_expressionCommand);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionExpressionContext functionExpression() {
			return GetRuleContext<FunctionExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberExpressionContext numberExpression() {
			return GetRuleContext<NumberExpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_expression);
		try {
			State = 142;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 140;
				functionExpression(0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 141;
				numberExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INLINABLE_COMMENT() { return GetToken(MppgParser.INLINABLE_COMMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEW_LINE() { return GetTokens(MppgParser.NEW_LINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEW_LINE(int i) {
			return GetToken(MppgParser.NEW_LINE, i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 12, RULE_comment);
		int _la;
		try {
			int _alt;
			State = 152;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INLINABLE_COMMENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 144;
				Match(INLINABLE_COMMENT);
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 145;
				Match(T__0);
				State = 149;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						State = 146;
						_la = TokenStream.LA(1);
						if ( _la <= 0 || (_la==NEW_LINE) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						}
						} 
					}
					State = 151;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InlineCommentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INLINABLE_COMMENT() { return GetToken(MppgParser.INLINABLE_COMMENT, 0); }
		public InlineCommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inlineComment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInlineComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InlineCommentContext inlineComment() {
		InlineCommentContext _localctx = new InlineCommentContext(Context, State);
		EnterRule(_localctx, 14, RULE_inlineComment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 154;
			Match(INLINABLE_COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EmptyContext : ParserRuleContext {
		public EmptyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_empty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMppgVisitor<TResult> typedVisitor = visitor as IMppgVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EmptyContext empty() {
		EmptyContext _localctx = new EmptyContext(Context, State);
		EnterRule(_localctx, 16, RULE_empty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
